Penambahan firebase google service dan penmabahan layout signin

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Dtres Catering</string>
+    <string name="signin_welcome">Selamat Datang Di D\'Tres Catering</string>
 </resources>
