--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Dtres Catering</string>
     <string name="signin_welcome">Selamat Datang Di D\'Tres Catering</string>
+    <string name="signin_failed">Gagal Masuk</string>
+    <string name="loading">Loading</string>
 </resources>
